[package]
name = "tree-backend"
version = "0.1.0"
edition = "2021"
authors = ["Forest Anderson <forestkzanderson@gmail.com>"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
pretty_env_logger = "0.4.0"
log = "0.4.14"

tree-data-schema = { path = "../tree-data-schema" }
