[package]
name = "tree-data-schema"
version = "0.1.0"
edition = "2021"
authors = ["Forest Anderson <forestkzanderson@gmail.com>"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
