[package]
name = "tree-frontend"
version = "0.1.0"
edition = "2021"


[dependencies]
yew = "0.19"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
reqwasm = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"

tree-data-schema = { path = "../tree-data-schema" }
