[package]
name = "tree-frontend"
version = "0.1.0"
edition = "2021"
authors = ["Forest Anderson <forestkzanderson@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
reqwasm = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"

tree-data-schema = { path = "../tree-data-schema" }
