[package]
name = "tree-visualizer"
version = "0.1.0"
edition = "2021"
authors = ["Forest Anderson <forestkzanderson@gmail.com>"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"
tree-writer = { path = "../tree-writer", features = ["visualizer"], default-features = false }
tree-data-schema = { path = "../tree-data-schema" }
