[package]
name = "tree-writer"
version = "0.1.0"
edition = "2021"

[features]
default = ["spidev"]
visualizer = []

[lib]
name = "tree_writer"
path = "src/lib.rs"

[[bin]]
name = "writerbin"
path = "src/main.rs"

[dependencies]
spidev = { version = "0.5.1", optional = true }
lazy_static = "1.4.0"
rand = "0.8.4"

tree-data-schema = { path = "../tree-data-schema" }

# mun_runtime = "0.3.0"