[package]
name = "tree-writer"
version = "0.1.0"
edition = "2021"
authors = ["Forest Anderson <forestkzanderson@gmail.com>"]
license = "MIT/Apache-2.0"

[features]
default = ["spidev"]
visualizer = []

[lib]
name = "tree_writer"
path = "src/lib.rs"

[[bin]]
name = "rusty-tree"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
spidev = { version = "0.5.1", optional = true }
lazy_static = "1.4.0"
rand = "0.8.4"
serde = "1.0.132"
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4.0"
log = "0.4.0"
flate2 = "1.0.22"

cached = "0.26"

tree-data-schema = { path = "../tree-data-schema" }

# mun_runtime = "0.3.0"